fixed some bugs with htmlOverflow

--- a/scss/layout/breakpoints.scss
+++ b/scss/layout/breakpoints.scss
@@ -6,6 +6,10 @@
     }
 }
 
+#main {
+    /*width:$breakpoint-main-min-width;*/
+}
+
 @mixin breakpoint-small-one-column {
     @media (max-width: $breakpoint-one-column) {
         @content;
